--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
     "vue-loader": "^11.1.4",
+    "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0"
