--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,11 @@
     ["latest", {
       "es2015": { "modules": false }
     }]
+  ],
+  "plugins": [
+    ["transform-runtime", {
+      "polyfill": false,
+      "regenerator": true
+    }]
   ]
 }
